--- a/package.json
+++ b/package.json
@@ -49,10 +49,12 @@
     "embla-carousel-react": "8.5.1",
     "framer-motion": "latest",
     "input-otp": "1.4.1",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.454.0",
     "next": "15.2.4",
     "next-themes": "^0.4.4",
     "react": "^19",
+    "react-date-picker": "^11.0.0",
     "react-day-picker": "8.10.1",
     "react-dom": "^19",
     "react-hook-form": "^7.54.1",
