--- a/package.json
+++ b/package.json
@@ -45,7 +45,9 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
+    "country-state-city": "^3.2.1",
     "date-fns": "^4.1.0",
+    "date-fns-tz": "^3.2.0",
     "embla-carousel-react": "8.5.1",
     "framer-motion": "latest",
     "input-otp": "1.4.1",
@@ -54,11 +56,14 @@
     "next": "15.2.4",
     "next-themes": "^0.4.4",
     "react": "^19",
+    "react-country-flag": "^3.1.0",
     "react-day-picker": "^9.7.0",
     "react-dom": "^19",
     "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.54.1",
+    "react-phone-number-input": "^3.4.12",
     "react-resizable-panels": "^2.1.7",
+    "react-select": "^5.10.1",
     "recharts": "2.15.0",
     "sonner": "^1.7.1",
     "tailwind-merge": "^2.5.5",
