--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
-    "country-state-city": "^3.2.1",
+
     "date-fns": "^4.1.0",
     "date-fns-tz": "^3.2.0",
     "embla-carousel-react": "8.5.1",
@@ -61,6 +61,7 @@
     "react-dom": "^19",
     "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.54.1",
+    "react-phone-input-2": "^2.15.1",
     "react-phone-number-input": "^3.4.12",
     "react-resizable-panels": "^2.1.7",
     "react-select": "^5.10.1",
